fix: regard scrollbar in layout

--- a/addons/frontend/src/styles/layout.css
+++ b/addons/frontend/src/styles/layout.css
@@ -32,7 +32,7 @@
 }
 
 #typst-container.mode-doc #typst-container-main {
-  width: 100vw;
+  width: calc(100% - (2 * var(--main-margin)));
 }
 
 #typst-container.mode-slide {
